--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,13 @@
             "request": "launch",
             "program": "${workspaceFolder}/TestSQLiteDbUpdater.py",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "attach",
+            "type": "debugpy",
+            "request": "attach",
+            "processId": "${command:pickProcess}"
         }
+
     ]
 }
